--- a/graphql-ast-explorer/index.html
+++ b/graphql-ast-explorer/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>GraphQL AST Visualizer</title>
+    <title>GraphQL AST Explorer</title>
   </head>
   <body>
     <div id="app"></div>
